# Navigator-Server

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
api/: app.py
backend/: search_client.py
backend/agent/: diagnostician_agent.py
projects/diagnostician-agent/: diagnostician-agent-README.md
projects/diagnostician-agent/eval/: examples.json  run.ts
projects/diagnostician-agent/retriever/: load_pdf_to_qdrant.py
