[project]
name = "beyond-chatgpt"
version = "0.1.0"
description = "gpt-like-a-dev"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "jupyter>=1.1.1",
    "openai",
    "pydantic>=2.11.4",
    "pypdf2>=3.0.1",
    "uvicorn>=0.34.2",
    "numpy",
    "python-multipart",
    "python-dotenv",
    "reportlab>=4.4.4",
    "pymupdf>=1.26.4",
    "langchain-community>=0.3.30",
    "langchain-openai>=0.3.35",
    "langchain-experimental>=0.3.4",
    "langgraph>=0.6.10",
    "qdrant-client>=1.9,<2.0",
    "ragas==0.2.10",
    "datasets>=2.0.0",
    "langchain-cohere>=0.4.6",
    "langchain-qdrant>=0.2.1",
    "tavily-python>=0.7.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pandas>=2.0.0",
]
